# study-rust-actix-web

./: .gitignore  Cargo.toml  README.md
src/: main.rs  model.rs  service.rs
