[package]
name = "study-rust-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
num_cpus = "1.16.0"
serde = { version = "1.0.199", features = ["derive"] }
